// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`invalid-for-await-using-binding-of-of.js format[babel] 1`] = `
"Unexpected token, expected ")" (1:24)
> 1 | for await (using of of of);
    |                        ^
  2 |
Cause: Unexpected token, expected ")" (1:23)"
`;

exports[`invalid-for-await-using-binding-of-of.js format[flow] 1`] = `
"Unexpected token \`await\`, expected the token \`(\` (1:5)
> 1 | for await (using of of of);
    |     ^
  2 |
Cause: Unexpected token \`await\`, expected the token \`(\` (1:4)"
`;

exports[`invalid-for-using-binding-in.js format[babel] 1`] = `
"For-in loop may not start with 'using' declaration. (1:6)
> 1 | for (using foo in {});
    |      ^
  2 |
Cause: For-in loop may not start with 'using' declaration. (1:5)"
`;

exports[`invalid-for-using-binding-in.js format[flow] 1`] = `
"Unexpected identifier, expected the token \`;\` (1:12)
> 1 | for (using foo in {});
    |            ^
  2 |
Cause: Unexpected identifier, expected the token \`;\` (1:11)"
`;

exports[`invalid-for-using-binding-of-in.js format[babel] 1`] = `
"Unexpected token (1:15)
> 1 | for (using of in []);
    |               ^
  2 |
Cause: Unexpected token (1:14)"
`;

exports[`invalid-for-using-binding-of-in.js format[flow] 1`] = `
"Unexpected token \`in\` (1:15)
> 1 | for (using of in []);
    |               ^
  2 |
Cause: Unexpected token \`in\` (1:14)"
`;

exports[`invalid-for-using-binding-of-of.js format[babel] 1`] = `
"Unexpected token, expected ")" (1:18)
> 1 | for (using of of of);
    |                  ^
  2 |
Cause: Unexpected token, expected ")" (1:17)"
`;

exports[`invalid-for-using-binding-of-of.js format[flow] 1`] = `
"Unexpected token \`of\`, expected the token \`)\` (1:18)
> 1 | for (using of of of);
    |                  ^
  2 |
Cause: Unexpected token \`of\`, expected the token \`)\` (1:17)"
`;

exports[`invalid-using-binding-let.js format[babel] 1`] = `
"'let' is disallowed as a lexically bound name. (2:9)
  1 | {
> 2 |   using let = h();
    |         ^
  3 | }
  4 |
Cause: 'let' is disallowed as a lexically bound name. (2:8)"
`;

exports[`invalid-using-binding-let.js format[flow] 1`] = `
"Unexpected token \`let\`, expected the end of an expression statement (\`;\`) (2:9)
  1 | {
> 2 |   using let = h();
    |         ^
  3 | }
  4 |
Cause: Unexpected token \`let\`, expected the end of an expression statement (\`;\`) (2:8)"
`;

exports[`invalid-using-binding-pattern.js format[babel] 1`] = `
"Unexpected token, expected ")" (4:25)
  2 |   using { foo } = f();
  3 |   using [ bar ] = g();
> 4 |   for (using { qux } of h());
    |                         ^
  5 |   for (using [ quux ] of i());
  6 | }
  7 |
Cause: Unexpected token, expected ")" (4:24)"
`;

exports[`invalid-using-binding-pattern.js format[flow] 1`] = `
"Unexpected token \`{\`, expected the end of an expression statement (\`;\`) (2:9)
  1 | {
> 2 |   using { foo } = f();
    |         ^
  3 |   using [ bar ] = g();
  4 |   for (using { qux } of h());
  5 |   for (using [ quux ] of i());
Cause: Unexpected token \`{\`, expected the end of an expression statement (\`;\`) (2:8)"
`;
